# colosseum-prediction-contract

./: Anchor.toml  SECURITY.md  buffer.json  package.json  uploader.json
programs/colosseum_prediction/: Cargo.toml
programs/colosseum_prediction/src/: lib.rs  security_contact.rs
programs/colosseum_prediction/src/constants/: constants.rs
programs/colosseum_prediction/src/errors/: errors.rs
programs/colosseum_prediction/src/events/: events.rs  mod.rs
programs/colosseum_prediction/src/ixs/: buy_binary_usdc.rs  buy_binary_usdt.rs  buy_credit_sol.rs  buy_credit_usdc.rs  buy_credit_usdt.rs  buy_option_usdc.rs  buy_option_usdt.rs  claim_winnings_yesno.rs  control_admin.rs  distribute_strike_rewards.rs  initialize_admin_config.rs  initialize_market.rs  mod.rs  resolve_market.rs  sell_binary.rs  sell_option.rs  set_market_trading_paused.rs  simulate_market_read_only.rs
programs/colosseum_prediction/src/state/: state.rs
programs/colosseum_prediction/src/utils/: utils.rs
tests/: colosseum_prediction.ts
