[package]
name = "colosseum_prediction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "colosseum_prediction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "switchboard-on-demand/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features= ["init-if-needed", "event-cpi"] }
anchor-spl = "0.31.1"
switchboard-on-demand = { version = "=0.10.3", features = ["anchor"] }
bytemuck = "1.14"
rust_decimal = "1.37.0"
sha2 = "0.10.8"
rand = "0.8"

[dev-dependencies]
litesvm = "=0.6.1"
solana-sdk = "2.1"  # Match litesvm's version
hex = "0.4"
openssl = { version = "0.10.74", features = ["vendored"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
